Issue 2523 - Fixed: Search input text invisible in Firefox on small screens

--- a/static/css/main-mobile.css
+++ b/static/css/main-mobile.css
@@ -106,12 +106,12 @@ header nav>ul>li a
 #search-field
 {
   width: 100%;
-  padding: 16px 10px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
+  padding: 10px;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  -ms-box-sizing: content-box;
+  -o-box-sizing: content-box;
+  box-sizing: content-box;
 }
 
 #search-field-label-button, #current-language
